# fitness-video-pipeline

./: .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF.md  README.md  _add_audio_main.py  _add_energy_16x9.py  _build_16x9.py  _edit_color.py  _make_final.py  _make_intro_outro_16x9.py  _pipeline_out.txt  _run_deblock.py  _run_pipeline.py  _smooth_skin.py  add_to_index.py  analyze2.py  analyze3.py  analyze4.py  analyze5.py  analyze6.py  analyze7.py  analyze8.py  analyze9.py  analyze_audio.py  auto_publish.py  auto_publish_state.json  batch_publish.py  coach_avatars.py  coach_portrait.py  coaches.yaml  config.yaml  day_counter.json  face_enhance_post.py  final_check.py  fitness_processor.py  fitness_processor_config.yaml  main.py  pyproject.toml  quality_check.py  (+4 more)
.claude/: settings.json
cloud_gpu/: README.md  auto_enhance.py  auto_upscale.py  check_gfpgan.py  check_model.py  check_urls.py  compare_faces.py  enhance_face.py  requirements.txt  upscale_video.py
docs/: ClaudeCode实施提示-视频质量优化.md  Claude重构建议.md  color_grade_video_使用说明.md  manual.md  精简重构任务清单.md  视频生成流程.md  视频质量优化建议.md  重构任务清单.md  重构设计方案.md  重构路线精简版.md  高光优化算法方案.md
legacy/: build_16x9.py  color_grade_video.py  convert_tflite_to_onnx.py  create_outro_pil.py  create_outro_text.py  finish_yanqing.py  make_outro_only.py  manual_build_16x9.py  manual_ffmpeg.py  manual_ffmpeg2.py  manual_final_16x9.py  mix_final.py  redo_outro_16x9.py  resume_pipeline.py  run_final_stages.py  run_h2v_only.py
lib/: ai_upscale.py  crop_strategy.py  face_mesh.py  face_warp.py  highlight_protect.py  lut_utils.py  mesh.py  tracker.py  (+5 more)
(+72 files in other folders)
